# hyperion

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  example.func
.github/workflows/: cffi-artifacts.yml  ci.yml  publish.yml
cffi/: Cargo.toml  build.rs
cffi/examples/: Makefile  sample.c  simple.c
cffi/include/: hycore.h
cffi/src/: lib.rs
cmake/: GitVersion.cmake  version.h.in
docs/: Introduction.md  PluginSystem.md  Roadmap.md  TheoremDerivation.md  formalism.typ
docs/report/: main.typ
docs/report/sections/: 00-introduction.typ  01-roadmap.typ  01-summary.typ  02-codebase-overview.typ  03-ir-spec.typ  04-theorem-derivation.typ
examples/: basic.rs  parser.rs
examples/hycore-examples/: Cargo.toml
examples/hycore-examples/src/: main.rs
examples/hycore-plugin/main/: Cargo.toml  test_plugin.toml
examples/hycore-plugin/main/src/: main.rs
examples/hycore-plugin/plugin/: Cargo.toml
examples/hycore-plugin/plugin/src/: lib.rs
examples/hyinstr-basic/: Cargo.toml
examples/hyinstr-basic/src/: main.rs
examples/hyinstr-parser/: Cargo.toml  example.func
examples/hyinstr-parser/src/: main.rs
hycore/: CMakeLists.txt  Cargo.toml
hycore/include/hycore/: except.h  except.hpp  generated_version.h  instructions.hpp  types.hpp
hycore/src/: compiler.rs  lib.rs  magic.rs  tests_utils.rs
hycore/src/attributes/: function.rs  mod.rs  modules.rs
hycore/src/axioms/: function.rs  mod.rs  modules.rs
hycore/src/base/: api.rs  ext.rs  meta.rs  mod.rs  module.rs
hycore/src/derivator/: mod.rs
hycore/src/ext/: hylog.rs  mod.rs
hycore/src/ext/hylog/: impl.rs  mod.rs
hycore/src/extractor/: mod.rs
hycore/src/formal/: axioms.rs  mod.rs
hycore/src/hycore/: except.cpp  instructions.cpp  types.cpp
hycore/src/instance/: api.rs  mod.rs  module.rs
hycore/src/provers/: mod.rs
hycore/src/specifications/: base.rs  fsm.rs  library.rs  memory.rs  mod.rs  module.rs  utils.rs
hycore/src/theorems/: library.rs  utils.rs
hycore/src/utils/: conf.rs  error.rs  lazy.rs  mod.rs  opaque.rs  ref_id.rs
hyformal/: Cargo.toml  README.md
hyformal-derive/: Cargo.toml
hyformal-derive/src/: lib.rs
hyformal/benches/: bench.rs
hyformal/examples/: arena.rs  basic.rs  parser.rs
hyformal/src/: arena.rs  lib.rs  variable.rs
hyformal/src/encoding/: mod.rs  tree.rs
hyformal/src/expr/: func.rs  mod.rs
hyformal/src/utils/: mod.rs
hyformal/src/walker/: immutable.rs  internal.rs
hyformal/tests/: encoding_tree.rs  expr_equality.rs  readme_examples.rs  treebuf.rs  walker.rs
hyinstr/: Cargo.toml  README.md
hyinstr/src/: analysis.rs  attached.rs  block.rs  constants.rs  instr.rs  lib.rs  name.rs  proof.rs  terminator.rs  utils.rs
hyinstr/src/consts/: fp.rs  int.rs  mod.rs
hyinstr/src/instr/: fp.rs  int.rs  mem.rs  mod.rs  operand.rs
hyinstr/src/modules/: control_flow.rs  fmt.rs  fp.rs  instructions.rs  int.rs  mem.rs  meta.rs  misc.rs  mod.rs  operand.rs  parser.rs  symbol.rs  terminator.rs
hyinstr/src/modules/instructions/: fp.rs  int.rs  mem.rs  meta.rs  misc.rs  mod.rs
hyinstr/src/types/: aggregate.rs  checker.rs  mod.rs  primary.rs
hyinstr/tests/: attached_function_tests.rs  modules_tests.rs  parser_math_tests.rs  type_checker_tests.rs  types_merge_tests.rs
hylog/: Cargo.toml
hylog/src/: lib.rs
python/: Cargo.toml  pyproject.toml
python/examples/: sample.py
python/python/hypi/: __init__.py  api.py
python/python/hypi/api/: __init__.py  ext_hylog.py
python/src/: lib.rs
scripts/: bump_version.py  clean.py  gen_uuid.py  install_ext.py
src/: arena.rs  dtype.rs  encoding.rs  expr.rs  lib.rs  ops.rs  parser.rs  prop.rs  term.rs  variable.rs  walker.rs
src/dtype/: defs.rs  dispatch.rs
src/encoding/: integer.rs  legacy_magic.rs  magic.rs  mod.rs  tree.rs
src/expr/: defs.rs  dispatch.rs  func.rs  mod.rs  pretty.rs  variant.rs  view.rs
src/prop/: defs.rs  dispatch.rs
src/term/: defs.rs
src/utils/: mod.rs  staticvec.rs
src/walker/: immutable.rs  internal.rs  mod.rs  mutable.rs  node_ref.rs
tests/: arena_expr.rs  expr_builders.rs  parser_roundtrip.rs  staticvec.rs  variables_and_pretty.rs  walker.rs
