[workspace]
resolver = "2"
members = ["hyinstr", "hycore", "examples/hyinstr-basic"]

[workspace.dependencies]
smallvec = ">=0.6.10, <=1.15.1"
strum = ">=0.25.0"
either = "*"
termcolor = "^1.1.1"
pretty = ">=0.10"
term_size = "*"
chumsky = ">=0.11"
typed-arena = "*"
stackalloc = "^1.1.1"
clap = ">=4.0"
serde = "^1"
uuid = "^1"
parking_lot = "^0.12"
log = ">=0.2"
num-bigint = "^0.4"
bigdecimal = "^0.4"
auto_enums = ">=0.7"
thiserror = "^2"
bitflags = "^2"
nalgebra = "^0.34"
enum-map = ">=2.4"

criterion = "0.5"
rand = "0.9.2"
rand_chacha = "0.9.0"
petgraph = "^0.8"

hyinstr = { path = "hyinstr" }
hycore = { path = "hycore" }
