[workspace]
resolver = "2"
members = [
    "hyinstr",
    "hycore",
    "python",
    "examples/hycore-examples",
    "examples/hyinstr-parser",
    "examples/hycore-plugin/main",
    "examples/hycore-plugin/plugin",
]
default-members = ["hyinstr", "hycore"]

[workspace.dependencies]
semver = "^1"
toml = "0.9.10"
smallvec = "2.0.0-alpha.12"
build-info = "0.0.42"
build-info-build = "0.0.42"
strum = ">=0.25.0"
either = "*"
termcolor = "^1.1.1"
pretty = ">=0.10"
term_size = "*"
chumsky = ">=0.11"
typed-arena = "*"
packing_lot = "^0.12"
stackalloc = "^1.1.1"
clap = ">=4.0"
serde = "^1"
uuid = "^1"
crossbeam = "^0.8"
parking_lot = "^0.12"
log = ">=0.2"
num-bigint = "^0.4"
bigdecimal = "^0.4"
auto_enums = ">=0.7"
thiserror = "^2"
bitflags = "^2"
nalgebra = "^0.34"
enum-map = ">=2.4"
bit-set = ">=0.5"
ariadne = "0.6"
libloading = "0.9"

criterion = "0.5"
rand = "0.9.2"
rand_chacha = "0.9.0"
petgraph = "^0.8"

hyinstr = { path = "hyinstr" }
hycore = { path = "hycore" }
