[package]
name = "hycore"
version = "0.1.1"
edition = "2024"

[dependencies]
hyinstr.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
petgraph.workspace = true
smallvec.workspace = true
semver.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
crossbeam.workspace = true
build-info.workspace = true
strum = { workspace = true, features = ["derive"] }
bitflags = { workspace = true }
nalgebra = { workspace = true, features = ["sparse"] }
enum-map = { workspace = true }
log = { workspace = true }
either.workspace = true
bit-set = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
downcast-rs.workspace = true
pyo3 = { workspace = true, features = [
    "uuid",
    "extension-module",
    "abi3",
    "chrono",
], optional = true }
chrono = { workspace = true }
inventory = { workspace = true }

[build-dependencies]
build-info-build.workspace = true

[features]
default = []

test-utils = ["hyinstr/chumsky"]
pyo3 = ["dep:pyo3"]

ext_hylog = []
ext_all = ["ext_hylog"]
