[package]
name = "hyformal"
version = "0.1.1"
license = "MIT"
repository = "https://github.com/HyperionProject/hyperion"
edition = "2024"
readme = "README.md"
description = "A formal, symbolic engine for hyperion"
keywords = ["formal", "symbolic", "hyperion"]
authors = ["Guillaume Boyé <guillaume.boye@epfl.ch>"]

[dependencies]
smallvec.workspace = true
strum = { workspace = true, features = ["derive"] }
pretty = { workspace = true, features = ["termcolor"] }
termcolor.workspace = true
term_size.workspace = true
chumsky.workspace = true
typed-arena.workspace = true
stackalloc.workspace = true
either.workspace = true

hyformal-derive = { workspace = true, optional = true }

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
hyformal-derive.workspace = true
criterion = { workspace = true, features = ["html_reports", "csv_output"] }
rand.workspace = true
rand_chacha.workspace = true

[features]
default = []
derive = ["hyformal-derive"]

[lib]
bench = false

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "parser"
path = "examples/parser.rs"

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false
