[package]
name = "hyinstr"
version = "0.1.3"
edition = "2024"

[dependencies]
uuid = { workspace = true, features = ["v6", "v8"] }
strum = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"], optional = true }
bigdecimal.workspace = true
num-bigint.workspace = true
parking_lot.workspace = true
smallvec.workspace = true
log.workspace = true
auto_enums.workspace = true
thiserror.workspace = true
petgraph.workspace = true
either.workspace = true
chumsky = { workspace = true, optional = true }

[features]
default = ["chumsky", "chumsky/either"]
serde = [
    "dep:serde",
    "serde/serde_derive",
    "uuid/serde",
    "num-bigint/serde",
    "bigdecimal/serde",
    "petgraph/serde",
]
chumsky = ["dep:chumsky"]
