[package]
name = "hypi-sys"
version = "0.1.0"
description = "Python system-bindings for hyperion"
homepage = "https://github.com/BoyeGuillaume/hyperion"
repository = "https://github.com/BoyeGuillaume/hyperion"
license-file = "LICENSE"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hypi_sys"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["extension-module", "uuid", "abi3"] }
hyinstr = { workspace = true, features = ["chumsky"] }
hycore = { workspace = true, features = ["test-utils"] }
uuid = { workspace = true, features = ["v4"] }
semver.workspace = true
